--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,1 +1,41 @@
-body
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    font-size: 20px;
+    max-height: 200px;
+    color: white;
+    text-align: center;
+    background-color: navy;
+    background-image: linear-gradient(to left, navy, red);
+}
+aside{
+    grid-area: menu;
+    padding: 2px;
+    border-right: 1px solid black;
+}
+
+#search-input{
+    max-width: 100%;
+}
+
+#today{
+    padding-top: 20px;
+}
+
+.jumbotron{
+    background-color: white;
+    text-align: left;
+    font-size: 25px;
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+    border-radius: 0px;
+}
+
+.card {
+    color: white;
+    background-color: rgb(red, green, blue);
+border-radius: 0px;
+  
+}
